# njmtech-knowledge-base

./: .gitignore  .infisical.json  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  skills-lock.json
apps/blob-cron/: CONTRIBUTING.md  Dockerfile  GEMINI.md  README.md  SECURITY.md  crontab  docker-compose.yml  entrypoint.sh  main.py  package.json  project.json  pyproject.toml  worker.mjs  wrangler.jsonc
apps/blob-cron/.github/workflows/: build.yml
apps/blob-cron/docs/: ai_powered_txt_markdown_transformation.md  cron_vercel_blob_scanner.md  database_vs_blob_state.md  explanation.md  openapi.json
apps/blob-cron/scripts/: README.md  final_cleanup_v2.py  run_cron.sh  sync_existing_notes.py
apps/blob-cron/src/njm_blob_cron/: config.py  database.py  secrets.py
apps/blob-cron/tests/: test_config.py
apps/blob-cron/tests/blob_storage/: test_vercel_blob.py
apps/blob-cron/tests/processing/: test_markdown_transformer.py
apps/blob-cron/tests/scanner/: test_directory_scanner.py
apps/upload-blob/: .wranglerignore  Dockerfile  README.md  package-lock.json  package.json  project.json  pyproject.toml  requirements.txt  vercel.json  worker.py  wrangler.jsonc
apps/upload-blob/.wrangler/cache/: cf.json
apps/upload-blob/api/: config.py  dependencies.py  main.py  secrets.py
apps/upload-blob/api/routers/: cron.py  home.py  vercel_blob.py
apps/upload-blob/api/runtime/: __init__.py  auth.py  blob_client.py  cache.py  http.py  worker_app.py
apps/upload-blob/api/services/: blob_storage.py
apps/upload-blob/python_modules/aenum-3.1.17.dist-info/: RECORD
apps/upload-blob/python_modules/boto3-1.42.93.dist-info/: RECORD
apps/upload-blob/python_modules/botocore-1.42.93.dist-info/: RECORD  (+1 more)
(+151 files in other folders)
