[project]
name = "njmtech-upload-blob"
version = "0.1.1"
description = "This is a simple FastAPI application to upload files to Vercel Blob storage."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn",
  "python-dotenv",
  "vercel-blob",
  "python-multipart",
  "pydantic",
  "Werkzeug"
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk"
]
